@@ -1,47 +1,53 @@
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import javax.annotation.Nullable;
+import com.mojang.brigadier.StringReader;
+import com.mojang.brigadier.arguments.ArgumentType;
+import com.mojang.brigadier.context.CommandContext;
+import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
+import java.util.Arrays;
+import java.util.Collection;
 
-public record fd(List<fd.a> b) {
-   public static final fd a = new fd(List.of());
-   private static final int c = 8;
-   private static final int d = 16;
+public class fd implements ArgumentType<fd.a> {
+   private static final Collection<String> c = Arrays.asList("0", "~", "~-5");
+   public static final SimpleCommandExceptionType a = new SimpleCommandExceptionType(wo.c("argument.angle.incomplete"));
+   public static final SimpleCommandExceptionType b = new SimpleCommandExceptionType(wo.c("argument.angle.invalid"));
 
-   public fd(wh $$0) {
-      this($$0.a(wh.a(ArrayList::new, 8), fd.a::new));
+   public static fd a() {
+      return new fd();
    }
 
-   public void a(wh $$0) {
-      $$0.a(this.b, ($$0x, $$1) -> $$1.a($$0x));
+   public static float a(CommandContext<ex> $$0, String $$1) {
+      return ((fd.a)$$0.getArgument($$1, fd.a.class)).a((ex)$$0.getSource());
    }
 
-   public static fd a(yc<?> $$0, fd.b $$1) {
-      List<fd.a> $$2 = $$0.a().stream().map($$1x -> {
-         xw $$2x = $$1.sign($$1x.c());
-         return $$2x != null ? new fd.a($$1x.a(), $$2x) : null;
-      }).filter(Objects::nonNull).toList();
-      return new fd($$2);
-   }
-
-   public List<fd.a> a() {
-      return this.b;
-   }
-
-   public static record a(String a, xw b) {
-      public a(wh $$0) {
-         this($$0.d(16), xw.a($$0));
-      }
-
-      public void a(wh $$0) {
-         $$0.a(this.a, 16);
-         xw.a($$0, this.b);
+   public fd.a a(StringReader $$0) throws CommandSyntaxException {
+      if (!$$0.canRead()) {
+         throw a.createWithContext($$0);
+      } else {
+         boolean $$1 = hb.b($$0);
+         float $$2 = $$0.canRead() && $$0.peek() != ' ' ? $$0.readFloat() : 0.0F;
+         if (!Float.isNaN($$2) && !Float.isInfinite($$2)) {
+            return new fd.a($$2, $$1);
+         } else {
+            throw b.createWithContext($$0);
+         }
       }
    }
 
-   @FunctionalInterface
-   public interface b {
-      @Nullable
-      xw sign(String var1);
+   public Collection<String> getExamples() {
+      return c;
+   }
+
+   public static final class a {
+      private final float a;
+      private final boolean b;
+
+      a(float $$0, boolean $$1) {
+         this.a = $$0;
+         this.b = $$1;
+      }
+
+      public float a(ex $$0) {
+         return ayz.h(this.b ? this.a + $$0.k().j : this.a);
+      }
    }
 }
