@@ -1,250 +1,43 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
+import java.util.List;
 
 public class ro {
-   public static final alo<epn> a = rh.a("village/taiga/town_centers");
-   private static final alo<epn> b = rh.a("village/taiga/terminators");
+   public static final akt<emq> a = ru.a("seagrass_warm");
+   public static final akt<emq> b = ru.a("seagrass_normal");
+   public static final akt<emq> c = ru.a("seagrass_cold");
+   public static final akt<emq> d = ru.a("seagrass_river");
+   public static final akt<emq> e = ru.a("seagrass_swamp");
+   public static final akt<emq> f = ru.a("seagrass_deep_warm");
+   public static final akt<emq> g = ru.a("seagrass_deep");
+   public static final akt<emq> h = ru.a("seagrass_deep_cold");
+   public static final akt<emq> i = ru.a("sea_pickle");
+   public static final akt<emq> j = ru.a("kelp_cold");
+   public static final akt<emq> k = ru.a("kelp_warm");
+   public static final akt<emq> l = ru.a("warm_ocean_vegetation");
 
-   public static void a(ra<epn> $$0) {
-      jr<enh> $$1 = $$0.a(mb.aT);
-      jq<enh> $$2 = $$1.b(st.h);
-      jq<enh> $$3 = $$1.b(st.i);
-      jq<enh> $$4 = $$1.b(st.e);
-      jq<enh> $$5 = $$1.b(st.l);
-      jq<enh> $$6 = $$1.b(st.m);
-      jr<esd> $$7 = $$0.a(mb.aV);
-      jq<esd> $$8 = $$7.b(ri.f);
-      jq<esd> $$9 = $$7.b(ri.d);
-      jq<esd> $$10 = $$7.b(ri.k);
-      jq<esd> $$11 = $$7.b(ri.o);
-      jr<epn> $$12 = $$0.a(mb.aX);
-      jq<epn> $$13 = $$12.b(rh.a);
-      jq<epn> $$14 = $$12.b(b);
-      $$0.a(
-         a,
-         new epn(
-            $$13,
-            ImmutableList.of(
-               Pair.of(epl.a("village/taiga/town_centers/taiga_meeting_point_1", $$8), 49),
-               Pair.of(epl.a("village/taiga/town_centers/taiga_meeting_point_2", $$8), 49),
-               Pair.of(epl.a("village/taiga/zombie/town_centers/taiga_meeting_point_1", $$9), 1),
-               Pair.of(epl.a("village/taiga/zombie/town_centers/taiga_meeting_point_2", $$9), 1)
-            ),
-            epn.a.b
-         )
-      );
-      rh.a(
-         $$0,
-         "village/taiga/streets",
-         new epn(
-            $$14,
-            ImmutableList.of(
-               Pair.of(epl.a("village/taiga/streets/corner_01", $$10), 2),
-               Pair.of(epl.a("village/taiga/streets/corner_02", $$10), 2),
-               Pair.of(epl.a("village/taiga/streets/corner_03", $$10), 2),
-               Pair.of(epl.a("village/taiga/streets/straight_01", $$10), 4),
-               Pair.of(epl.a("village/taiga/streets/straight_02", $$10), 4),
-               Pair.of(epl.a("village/taiga/streets/straight_03", $$10), 4),
-               Pair.of(epl.a("village/taiga/streets/straight_04", $$10), 7),
-               Pair.of(epl.a("village/taiga/streets/straight_05", $$10), 7),
-               Pair.of(epl.a("village/taiga/streets/straight_06", $$10), 4),
-               Pair.of(epl.a("village/taiga/streets/crossroad_01", $$10), 1),
-               Pair.of(epl.a("village/taiga/streets/crossroad_02", $$10), 1),
-               Pair.of(epl.a("village/taiga/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(epl.a("village/taiga/streets/crossroad_04", $$10), 2),
-                  Pair.of(epl.a("village/taiga/streets/crossroad_05", $$10), 2),
-                  Pair.of(epl.a("village/taiga/streets/crossroad_06", $$10), 2),
-                  Pair.of(epl.a("village/taiga/streets/turn_01", $$10), 3)
-               }
-            ),
-            epn.a.a
-         )
-      );
-      rh.a(
-         $$0,
-         "village/taiga/zombie/streets",
-         new epn(
-            $$14,
-            ImmutableList.of(
-               Pair.of(epl.a("village/taiga/zombie/streets/corner_01", $$10), 2),
-               Pair.of(epl.a("village/taiga/zombie/streets/corner_02", $$10), 2),
-               Pair.of(epl.a("village/taiga/zombie/streets/corner_03", $$10), 2),
-               Pair.of(epl.a("village/taiga/zombie/streets/straight_01", $$10), 4),
-               Pair.of(epl.a("village/taiga/zombie/streets/straight_02", $$10), 4),
-               Pair.of(epl.a("village/taiga/zombie/streets/straight_03", $$10), 4),
-               Pair.of(epl.a("village/taiga/zombie/streets/straight_04", $$10), 7),
-               Pair.of(epl.a("village/taiga/zombie/streets/straight_05", $$10), 7),
-               Pair.of(epl.a("village/taiga/zombie/streets/straight_06", $$10), 4),
-               Pair.of(epl.a("village/taiga/zombie/streets/crossroad_01", $$10), 1),
-               Pair.of(epl.a("village/taiga/zombie/streets/crossroad_02", $$10), 1),
-               Pair.of(epl.a("village/taiga/zombie/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(epl.a("village/taiga/zombie/streets/crossroad_04", $$10), 2),
-                  Pair.of(epl.a("village/taiga/zombie/streets/crossroad_05", $$10), 2),
-                  Pair.of(epl.a("village/taiga/zombie/streets/crossroad_06", $$10), 2),
-                  Pair.of(epl.a("village/taiga/zombie/streets/turn_01", $$10), 3)
-               }
-            ),
-            epn.a.a
-         )
-      );
-      rh.a(
-         $$0,
-         "village/taiga/houses",
-         new epn(
-            $$14,
-            ImmutableList.of(
-               Pair.of(epl.a("village/taiga/houses/taiga_small_house_1", $$8), 4),
-               Pair.of(epl.a("village/taiga/houses/taiga_small_house_2", $$8), 4),
-               Pair.of(epl.a("village/taiga/houses/taiga_small_house_3", $$8), 4),
-               Pair.of(epl.a("village/taiga/houses/taiga_small_house_4", $$8), 4),
-               Pair.of(epl.a("village/taiga/houses/taiga_small_house_5", $$8), 4),
-               Pair.of(epl.a("village/taiga/houses/taiga_medium_house_1", $$8), 2),
-               Pair.of(epl.a("village/taiga/houses/taiga_medium_house_2", $$8), 2),
-               Pair.of(epl.a("village/taiga/houses/taiga_medium_house_3", $$8), 2),
-               Pair.of(epl.a("village/taiga/houses/taiga_medium_house_4", $$8), 2),
-               Pair.of(epl.a("village/taiga/houses/taiga_butcher_shop_1", $$8), 2),
-               Pair.of(epl.a("village/taiga/houses/taiga_tool_smith_1", $$8), 2),
-               Pair.of(epl.a("village/taiga/houses/taiga_fletcher_house_1", $$8), 2),
-               new Pair[]{
-                  Pair.of(epl.a("village/taiga/houses/taiga_shepherds_house_1", $$8), 2),
-                  Pair.of(epl.a("village/taiga/houses/taiga_armorer_house_1", $$8), 1),
-                  Pair.of(epl.a("village/taiga/houses/taiga_armorer_2", $$8), 1),
-                  Pair.of(epl.a("village/taiga/houses/taiga_fisher_cottage_1", $$8), 3),
-                  Pair.of(epl.a("village/taiga/houses/taiga_tannery_1", $$8), 2),
-                  Pair.of(epl.a("village/taiga/houses/taiga_cartographer_house_1", $$8), 2),
-                  Pair.of(epl.a("village/taiga/houses/taiga_library_1", $$8), 2),
-                  Pair.of(epl.a("village/taiga/houses/taiga_masons_house_1", $$8), 2),
-                  Pair.of(epl.a("village/taiga/houses/taiga_weaponsmith_1", $$8), 2),
-                  Pair.of(epl.a("village/taiga/houses/taiga_weaponsmith_2", $$8), 2),
-                  Pair.of(epl.a("village/taiga/houses/taiga_temple_1", $$8), 2),
-                  Pair.of(epl.a("village/taiga/houses/taiga_large_farm_1", $$11), 6),
-                  Pair.of(epl.a("village/taiga/houses/taiga_large_farm_2", $$11), 6),
-                  Pair.of(epl.a("village/taiga/houses/taiga_small_farm_1", $$8), 1),
-                  Pair.of(epl.a("village/taiga/houses/taiga_animal_pen_1", $$8), 2),
-                  Pair.of(epl.h(), 6)
-               }
-            ),
-            epn.a.b
-         )
-      );
-      rh.a(
-         $$0,
-         "village/taiga/zombie/houses",
-         new epn(
-            $$14,
-            ImmutableList.of(
-               Pair.of(epl.a("village/taiga/zombie/houses/taiga_small_house_1", $$9), 4),
-               Pair.of(epl.a("village/taiga/zombie/houses/taiga_small_house_2", $$9), 4),
-               Pair.of(epl.a("village/taiga/zombie/houses/taiga_small_house_3", $$9), 4),
-               Pair.of(epl.a("village/taiga/zombie/houses/taiga_small_house_4", $$9), 4),
-               Pair.of(epl.a("village/taiga/zombie/houses/taiga_small_house_5", $$9), 4),
-               Pair.of(epl.a("village/taiga/zombie/houses/taiga_medium_house_1", $$9), 2),
-               Pair.of(epl.a("village/taiga/zombie/houses/taiga_medium_house_2", $$9), 2),
-               Pair.of(epl.a("village/taiga/zombie/houses/taiga_medium_house_3", $$9), 2),
-               Pair.of(epl.a("village/taiga/zombie/houses/taiga_medium_house_4", $$9), 2),
-               Pair.of(epl.a("village/taiga/houses/taiga_butcher_shop_1", $$9), 2),
-               Pair.of(epl.a("village/taiga/zombie/houses/taiga_tool_smith_1", $$9), 2),
-               Pair.of(epl.a("village/taiga/houses/taiga_fletcher_house_1", $$9), 2),
-               new Pair[]{
-                  Pair.of(epl.a("village/taiga/zombie/houses/taiga_shepherds_house_1", $$9), 2),
-                  Pair.of(epl.a("village/taiga/houses/taiga_armorer_house_1", $$9), 1),
-                  Pair.of(epl.a("village/taiga/zombie/houses/taiga_fisher_cottage_1", $$9), 2),
-                  Pair.of(epl.a("village/taiga/houses/taiga_tannery_1", $$9), 2),
-                  Pair.of(epl.a("village/taiga/zombie/houses/taiga_cartographer_house_1", $$9), 2),
-                  Pair.of(epl.a("village/taiga/zombie/houses/taiga_library_1", $$9), 2),
-                  Pair.of(epl.a("village/taiga/houses/taiga_masons_house_1", $$9), 2),
-                  Pair.of(epl.a("village/taiga/houses/taiga_weaponsmith_1", $$9), 2),
-                  Pair.of(epl.a("village/taiga/zombie/houses/taiga_weaponsmith_2", $$9), 2),
-                  Pair.of(epl.a("village/taiga/zombie/houses/taiga_temple_1", $$9), 2),
-                  Pair.of(epl.a("village/taiga/houses/taiga_large_farm_1", $$9), 6),
-                  Pair.of(epl.a("village/taiga/zombie/houses/taiga_large_farm_2", $$9), 6),
-                  Pair.of(epl.a("village/taiga/houses/taiga_small_farm_1", $$9), 1),
-                  Pair.of(epl.a("village/taiga/houses/taiga_animal_pen_1", $$9), 2),
-                  Pair.of(epl.h(), 6)
-               }
-            ),
-            epn.a.b
-         )
-      );
-      $$0.a(
-         b,
-         new epn(
-            $$13,
-            ImmutableList.of(
-               Pair.of(epl.a("village/plains/terminators/terminator_01", $$10), 1),
-               Pair.of(epl.a("village/plains/terminators/terminator_02", $$10), 1),
-               Pair.of(epl.a("village/plains/terminators/terminator_03", $$10), 1),
-               Pair.of(epl.a("village/plains/terminators/terminator_04", $$10), 1)
-            ),
-            epn.a.a
-         )
-      );
-      rh.a(
-         $$0,
-         "village/taiga/decor",
-         new epn(
-            $$13,
-            ImmutableList.of(
-               Pair.of(epl.a("village/taiga/taiga_lamp_post_1"), 10),
-               Pair.of(epl.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(epl.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(epl.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(epl.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(epl.a("village/taiga/taiga_decoration_5"), 2),
-               Pair.of(epl.a("village/taiga/taiga_decoration_6"), 1),
-               Pair.of(epl.a($$2), 4),
-               Pair.of(epl.a($$3), 4),
-               Pair.of(epl.a($$4), 2),
-               Pair.of(epl.a($$5), 4),
-               Pair.of(epl.a($$6), 1),
-               new Pair[]{Pair.of(epl.h(), 4)}
-            ),
-            epn.a.b
-         )
-      );
-      rh.a(
-         $$0,
-         "village/taiga/zombie/decor",
-         new epn(
-            $$13,
-            ImmutableList.of(
-               Pair.of(epl.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(epl.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(epl.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(epl.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(epl.a($$2), 4),
-               Pair.of(epl.a($$3), 4),
-               Pair.of(epl.a($$4), 2),
-               Pair.of(epl.a($$5), 4),
-               Pair.of(epl.a($$6), 1),
-               Pair.of(epl.h(), 4)
-            ),
-            epn.a.b
-         )
-      );
-      rh.a(
-         $$0,
-         "village/taiga/villagers",
-         new epn(
-            $$13,
-            ImmutableList.of(
-               Pair.of(epl.a("village/taiga/villagers/nitwit"), 1),
-               Pair.of(epl.a("village/taiga/villagers/baby"), 1),
-               Pair.of(epl.a("village/taiga/villagers/unemployed"), 10)
-            ),
-            epn.a.b
-         )
-      );
-      rh.a(
-         $$0,
-         "village/taiga/zombie/villagers",
-         new epn(
-            $$13,
-            ImmutableList.of(Pair.of(epl.a("village/taiga/zombie/villagers/nitwit"), 1), Pair.of(epl.a("village/taiga/zombie/villagers/unemployed"), 10)),
-            epn.a.b
-         )
-      );
+   private static List<emt> a(int $$0) {
+      return List.of(emn.a(), ru.c, emi.a($$0), eme.a());
+   }
+
+   public static void a(qe<emq> $$0) {
+      js<efk<?, ?>> $$1 = $$0.a(mc.aL);
+      jr.c<efk<?, ?>> $$2 = $$1.b(rc.a);
+      jr.c<efk<?, ?>> $$3 = $$1.b(rc.b);
+      jr.c<efk<?, ?>> $$4 = $$1.b(rc.c);
+      jr.c<efk<?, ?>> $$5 = $$1.b(rc.d);
+      jr.c<efk<?, ?>> $$6 = $$1.b(rc.e);
+      jr.c<efk<?, ?>> $$7 = $$1.b(rc.f);
+      jr.c<efk<?, ?>> $$8 = $$1.b(rc.g);
+      ru.a($$0, a, $$2, a(80));
+      ru.a($$0, b, $$2, a(48));
+      ru.a($$0, c, $$2, a(32));
+      ru.a($$0, d, $$3, a(48));
+      ru.a($$0, e, $$4, a(64));
+      ru.a($$0, f, $$5, a(80));
+      ru.a($$0, g, $$5, a(48));
+      ru.a($$0, h, $$5, a(40));
+      ru.a($$0, i, $$6, emw.a(16), emn.a(), ru.c, eme.a());
+      ru.a($$0, j, $$7, emo.a(120, 80.0, 0.0), emn.a(), ru.c, eme.a());
+      ru.a($$0, k, $$7, emo.a(80, 80.0, 0.0), emn.a(), ru.c, eme.a());
+      ru.a($$0, l, $$8, emo.a(20, 400.0, 0.0), emn.a(), ru.c, eme.a());
    }
 }
